<resources>
    <string name="app_name">iCaller</string>
    <string name="key_icaller">iCaller</string>
    <string name="fm_setting_history">History</string>
    <string name="facebook_app_id" translatable="false">575110759701467</string>
    <string name="adUnitId_scr_history" translatable="false">ca-app-pub-3495243441483561/7489911000</string>
    <string name="adUnitId_scr_contact_list" translatable="false">ca-app-pub-3495243441483561/1116074342</string>
    <string name="adUnitId_scr_spam_configuration" translatable="false">ca-app-pub-3495243441483561/2429156015</string>
    <string name="adUnitId_scr_add_black_list" translatable="false">ca-app-pub-3495243441483561/5344746352</string>
    <string name="adUnitId_scr_setting" translatable="false">ca-app-pub-3495243441483561/5536318043</string>
    <string name="adUnitId_scr_call_log_detail" translatable="false">ca-app-pub-3495243441483561/1980216414</string>
    <string name="adUnitId_scr_after_call" translatable="false">ca-app-pub-3495243441483561/4103483736</string>
    <string name="dialpad_number_one" translatable="false">1</string>
    <string name="dialpad_number_two" translatable="false">2</string>
    <string name="dialpad_text_two" translatable="false">a b c</string>
    <string name="dialpad_number_three" translatable="false">3</string>
    <string name="dialpad_text_three" translatable="false">d e f</string>
    <string name="dialpad_number_four" translatable="false">4</string>
    <string name="dialpad_text_four" translatable="false">g h i</string>
    <string name="dialpad_number_five" translatable="false">5</string>
    <string name="dialpad_text_five" translatable="false">j k l</string>
    <string name="dialpad_number_six" translatable="false">6</string>
    <string name="dialpad_text_six" translatable="false">m n o</string>
    <string name="dialpad_number_seven" translatable="false">7</string>
    <string name="dialpad_text_seven" translatable="false">p q r s</string>
    <string name="dialpad_number_eight" translatable="false">8</string>
    <string name="dialpad_text_eight" translatable="false">t u v</string>
    <string name="dialpad_number_nine" translatable="false">9</string>
    <string name="dialpad_text_nine" translatable="false">w x y z</string>
    <string name="dialpad_number_star" translatable="false">*</string>
    <string name="dialpad_number_zero" translatable="false">0</string>
    <string name="dialpad_number_hashtag" translatable="false">#</string>
    <string name="dialpad_text_zero" translatable="false">+</string>
    <string name="loading" translatable="false">Loading</string>
    <string name="key_privacy_policy_no_trans" translatable="false">Privacy Policy</string>
    <string name="key_tou_no_trans" translatable="false">Terms of Service</string>
    <string name="welcome_to_no_trans" translatable="false">Welcome to iCaller</string>
    <string name="accept_and_continue" translatable="false">Accept and continue</string>
    <string name="description_button_term" translatable="false">Click Accept and continue to agree to our Privacy Policy and Terms of Service</string>
    <string name="content_welcome_to" translatable="false">Please take sometime to review the key points of our Privacy Policy and Terms of Service</string>
    <string name="data_process" translatable="false">Data we process</string>
    <string name="content_data_process" translatable="false">When You create a user profile in the Services and confirm being the holder of a certain number, iCaller will collect the information provided by You. In order to create a user profile, You must register Your first name, last name and phone number. Additional information that may be provided at Your option include, but is not limited to, photo, gender, and zip code
        \n\nWhen You install and use the Services, we collect and process your personal data such as name, phone, number, etc. and information about your activity when using our services, such as your device information, contact list information, phone number query record.</string>
    <string name="how_we_use_your_data" translatable="false">How we use your data</string>
    <string name="content_how_use_data" translatable="false">Situations in which your data will be used are listed in our Privacy policy. We use your data for the following purposes:\n
    -	In order to provide the services iCaller offers (including but not limited to phone number recognition) and to respond to your phone number query requests, we collect your contactlist information, profile data and the information granted to us when you access our services (including but not limited to your name and phone number).\n
    -	We use your data to optimize user experience and develop anti-spam technologies &amp; services.\n
    -	In order to optimize our services, your personal data will be compiled into anonymous statistical analysis information by virtue of the de-identification technology and non-personally identifiable information.\n
    -	In order to provide more robust product features, we request you to provide the aforementioned access permissions. You may cancel or refuse to grant such permissions at any time, but you will not be able to enjoy the full range of product features afterwards.</string>
    <string name="key_speaker">Loa</string>
    <string name="key_keypad">Bàn phím</string>
    <string name="key_mic_not_active">Tắt âm</string>
    <string name="key_mic_active">Mic</string>
    <string name="key_hide">Ẩn</string>
    <string name="INCOMING">Cuộc gọi đã nhận</string>
    <string name="OUTCOMING">"Cuộc gọi đi "</string>
    <string name="MISSED">Gọi nhỡ</string>
    <string name="key_Today">Hôm nay</string>
    <string name="key_yesterday">Hôm qua</string>
    <string name="msg_no_internet_access">Not Internet</string>
    <string name="key_end_call">Kết thúc</string>
    <string name="key_FAQ">Câu hỏi thường gặp</string>
    <string name="key_settings">Cài  đặt</string>
    <string name="key_delete">Xóa</string>
    <string name="key_new_contact">Liên hệ mới</string>
    <string name="key_info">Thông tin</string>
    <string name="key_sign_in">Đăng nhập</string>
    <string name="key_enter_your_phone_number">Nhập số điện thoại của bạn</string>
    <string name="key_enter_your_password">Nhập mật khẩu của bạn</string>
    <string name="key_cancel">Hủy</string>
    <string name="key_about">Giới thiệu</string>
    <string name="key_privacy_policy">Điều khoản bảo mật</string>
    <string name="key_logout">Đăng xuất</string>
    <string name="log_out">Đăng xuất</string>
    <string name="key_others">Khác</string>
    <string name="key_phone_number">Số điện thoại</string>
    <string name="key_password">Mật khẩu</string>
    <string name="key_ok">OK</string>
    <string name="key_reset_password">Đặt lại mật khẩu</string>
    <string name="key_please_check_your_network_connection">Hãy kiểm tra lại kết nối mạng</string>
    <string name="key_no_data">Không có dữ liệu</string>
    <string name="key_cannot_delete_contact">Không thể xoá liên hệ</string>
    <string name="key_you_sure_want_to_delete_this_contact">Bạn có chắc muốn xoá liên hệ này không?</string>
    <string name="key_contacts_access_denied">Không được phép truy cập danh bạ\nHay cho phép trong thiết lập ứng dụng</string>
    <string name="key_cannot_get_device_contacts">Không lấy được thông tin danh bạ của thiết bị</string>
    <string name="key_your_session_was_expired">Phiên làm việc hết hạn\nHãy đăng nhập lại</string>
    <string name="key_un_identified_error">Lỗi chưa xác định\nHãy thử lại sau</string>
    <string name="key_unauthorized">Chưa đăng nhập</string>
    <string name="key_invalid_user">Tài khoản không hợp lệ</string>
    <string name="key_invalid_phone_number">Số điện thoại không hợp lệ</string>
    <string name="key_enter_phone_number">Nhập số điện thoại</string>
    <string name="key_invalid_username_or_password">Tên người dùng hoặc mật khẩu không đúng</string>
    <string name="key_password_reseting_failed">Đặt lại mật khẩu không thành công\nHãy thử lại sau</string>
    <string name="key_your_password_has_been_reset">Mật khẩu đã được đặt lại\nHãy kiểm tra SMS để lấy mật khẩu mới</string>
    <string name="key_under_development">Đang phát triển</string>
    <string name="key_cannot_logout">Không đăng xuất được\nHãy thử lại sau</string>
    <string name="key_do_you_really_want_to_logout">Bạn có chắc muốn đăng xuất khỏi iCaller?</string>
    <string name="key_RESET">ĐẶT LẠI</string>
    <string name="key_SIGN_IN">ĐĂNG NHẬP</string>
    <string name="key_RESET_PASSWORD">ĐẶT LẠI MẬT KHẨU</string>
    <string name="key_BLOCKED">Danh sách chặn</string>
    <string name="key_block_list_search">Danh sách chặn (%1$d)</string>
    <string name="key_search">Tìm</string>
    <string name="key_CONTACTS">DANH BẠ</string>
    <string name="key_device_list_search">DANH BẠ (%1$d)</string>
    <string name="key_SETTINGS">CÀI ĐẶT</string>
    <string name="key_reset_request_password">Đặt lại / Yêu cầu mật khẩu</string>
    <string name="key_app_version">Phiên bản %1$s</string>
    <string name="key_choose_number_to_dial">Chọn số để gọi</string>
    <string name="key_history">Lịch sử cuộc gọi</string>
    <string name="key_SEND">GỬI</string>
    <string name="key_NO">KHÔNG</string>
    <string name="key_phone_password_not_true">Số điện thoại hoặc Mật khẩu không đúng !</string>
    <string name="key_YES">Đồng ý</string>
    <string name="key_reset_password_success">Đặt lại mật khẩu thành công !</string>
    <string name="key_are_you_sure_you_want_to_logout">Bạn có chắc chắn bạn muốn đăng xuất?</string>
    <string name="key_call_with">Gọi bằng</string>
    <string name="key_always_use_this_for_calls">Luôn sử dụng SIM này để gọi</string>
    <string name="key_calling">Đang gọi</string>
    <string name="key_no_sim_card_or_sim_card_error">Không có thẻ SIM hoặc thẻ SIM lỗi.</string>
    <string name="key_ending_calling">Đang kết thúc cuộc gọi</string>
    <string name="key_version">Phiên bản</string>
    <string name="key_loading">Đang tải</string>
    <string name="key_answer">Trả lời</string>
    <string name="key_user_busy">Người dùng bận</string>
    <string name="key_exit_application">Thoát ứng dụng</string>
    <string name="key_Are_you_sure_you_want_to_exit">" Bạn có chắc bạn muốn thoát?"</string>
    <string name="key_unknown">Không xác định</string>
    <string name="key_dual_sim">Hai SIM</string>
    <string name="key_ask_every_time">Luôn hỏi</string>
    <string name="key_ask_draw"><![CDATA[Bật thiết lập <b>Hiển thị trên ứng dụng khác</b> để có thể hiển thị thông tin liên hệ iCaller khi có cuộc gọi]]></string>
    <string name="key_ask_draw_miui"><![CDATA[Bật thiết lập <b>Hiển thị cửa sổ pop-up</b> và <b>Hiển thị cửa sổ pop-up khi chạy trong nền</b> để có thể hiển thị thông tin liên hệ iCaller khi có cuộc gọi]]></string>
    <string name="key_no_service">Không có dịch vụ nào</string>
    <string name="request_permission">Cho phép</string>
    <string name="key_tou">Điều khoản sử dụng</string>
    <string name="PHONE_NUMBER">SỐ ĐIỆN THOẠI</string>
    <string name="SIGN_IN">ĐĂNG NHẬP</string>
    <string name="update">Cập nhật</string>
    <string name="update_top_spammers">Cập nhật danh sách bị chặn</string>
    <string name="updating_this_list">Nhận danh sách cập nhật các số spam được báo cáo gần nhất để phát hiện chúng nhanh chóng ngay cả khi ngoại tuyến. Cập nhật danh sách này thường xuyên.</string>
    <string name="data">Dữ liệu %1$s</string>
    <string name="resend_verification_code"><![CDATA[<u>Gửi lại mã xác nhận.</u>]]></string>
    <string name="title_dialpad">Bàn phím</string>
    <string name="title_history">Lịch sử</string>
    <string name="title_contact">Danh bạ</string>
    <string name="title_block">Danh sách</string>
    <string name="title_setting">Cài đặt</string>
    <string name="notify_dismiss">Bỏ qua</string>
    <string name="notify_login_fail">Bạn cần thêm số điện thoại</string>
</resources>