<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.icaller_mobile.features.settings.SettingsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/txtAbout"
            style="@style/Settings_Item"
            android:onClick="@{() -> viewModel.onClickAbout()}"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/key_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageAbout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:padding="@dimen/_14sdp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/txtAbout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtAbout" />

        <TextView
            android:id="@+id/txtPolicy"
            style="@style/Settings_Item"
            android:onClick="@{() -> viewModel.onClickPrivacyPolicy()}"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/key_privacy_policy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtAbout" />

        <ImageView
            android:id="@+id/imagePolicy"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:padding="@dimen/_14sdp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/txtPolicy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtPolicy" />

        <TextView
            android:id="@+id/txtTou"
            style="@style/Settings_Item"
            android:onClick="@{() -> viewModel.onClickTermOfService()}"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/key_tou"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtPolicy" />

        <ImageView
            android:id="@+id/imageTou"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:padding="@dimen/_14sdp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/txtTou"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtTou" />


        <TextView
            android:id="@+id/txtFaq"
            style="@style/Settings_Item"
            android:onClick="@{() -> viewModel.onClickFAQ()}"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/key_FAQ"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTou" />

        <ImageView
            android:id="@+id/imageFaq"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:padding="@dimen/_14sdp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/txtFaq"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtFaq" />

        <TextView
            android:id="@+id/txtLogout"
            style="@style/Settings_Item"
            android:onClick="@{()->viewModel.logout()}"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/key_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtFaq" />

        <ImageView
            android:id="@+id/imageLogout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:padding="@dimen/_14sdp"
            android:src="@drawable/ic_log_out"
            app:layout_constraintBottom_toBottomOf="@+id/txtLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtLogout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>